--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ footer h4 a {font-weight: bolder;display: inline-block; }
 .BETABANNER section > a:hover {background-color: #398bf0;}
 .BETABANNER .SASSAL {width: 20px; height: 20px; position: fixed; bottom: 10px; left: 5px;}
 .BETABANNER .SASSAL img {width: 20px; height: 20px;}
+.UPLOADBANNER {width: 100%;height: 100%; overflow: hidden; display: inline-block;background-color: #000000; position: absolute; top: 0; left: 0;}
 
 @media only screen and (min-device-width: 500px) {
     .MANAGE h2 {margin-bottom: 150px;}
